Updated mobile index page; fixed formatting for the quote section and made the footer more readable.

--- a/alpha/css/style_mobile.sass
+++ b/alpha/css/style_mobile.sass
@@ -30,7 +30,7 @@ body
     width: 80vw
     text-align: center
     margin-left: 10vw
-    margin-bottom: 10vh
+    margin-bottom: 4vh
     border-top: 1px solid black
     padding-top: 2vh
 
@@ -44,9 +44,9 @@ body
   button
     margin-bottom: 5vh
   .quote_span, .quoteSource
-    font-size: 1.5em
+    font-size: 1.2em
   .quoteSource
-    margin-top: 5vh
+    margin-top: 3vh
 
 .footer
   background-color: grey
@@ -56,6 +56,7 @@ body
   border-top: 1px solid gray
   width: 100%
   height: auto
+  font-weight: bold
   text-align: center
   .inputQoD, .inputQoDSource
     font-style: italic
